--- a/platform/msvc/projects/shadertrans.vcxproj
+++ b/platform/msvc/projects/shadertrans.vcxproj
@@ -12,12 +12,18 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\..\source\CompilerDX.cpp" />
+    <ClCompile Include="..\..\..\source\GLSLangAdapter.cpp" />
+    <ClCompile Include="..\..\..\source\ShaderInfo.cpp" />
+    <ClCompile Include="..\..\..\source\ShaderParser.cpp" />
     <ClCompile Include="..\..\..\source\ShaderTrans.cpp" />
     <ClCompile Include="..\..\..\source\ShaderValidator.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\include\shadertrans\CompilerDX.h" />
     <ClInclude Include="..\..\..\include\shadertrans\ConfigGLSL.h" />
+    <ClInclude Include="..\..\..\include\shadertrans\GLSLangAdapter.h" />
+    <ClInclude Include="..\..\..\include\shadertrans\ShaderInfo.h" />
+    <ClInclude Include="..\..\..\include\shadertrans\ShaderParser.h" />
     <ClInclude Include="..\..\..\include\shadertrans\ShaderStage.h" />
     <ClInclude Include="..\..\..\include\shadertrans\ShaderTrans.h" />
     <ClInclude Include="..\..\..\include\shadertrans\ShaderValidator.h" />
