--- a/platform/msvc/.gitignore
+++ b/platform/msvc/.gitignore
@@ -3,3 +3,5 @@ projects/*
 
 !projects/shadertrans.vcxproj
 !projects/shadertrans.vcxproj.filters
+!projects/shadertrans_new.vcxproj
+!projects/shadertrans_new.vcxproj.filters
