[ADDED] get shader uniforms

--- a/platform/msvc/projects/shadertrans_new.vcxproj.filters
+++ b/platform/msvc/projects/shadertrans_new.vcxproj.filters
@@ -19,6 +19,9 @@
     <ClCompile Include="..\..\..\source\GLSLangAdapter.cpp">
       <Filter>tools</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\source\ShaderReflection.cpp">
+      <Filter>parser</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\include\shadertrans\ShaderParser.h">
@@ -44,6 +47,9 @@
     </ClInclude>
     <ClInclude Include="..\..\..\include\shadertrans\GLSLangAdapter.h">
       <Filter>tools</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\include\shadertrans\ShaderReflection.h">
+      <Filter>parser</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
