--- a/platform/msvc/projects/shadertrans_new.vcxproj
+++ b/platform/msvc/projects/shadertrans_new.vcxproj
@@ -23,6 +23,7 @@
     <ClCompile Include="..\..\..\source\GLSLangAdapter.cpp" />
     <ClCompile Include="..\..\..\source\ShaderInfo.cpp" />
     <ClCompile Include="..\..\..\source\ShaderParser.cpp" />
+    <ClCompile Include="..\..\..\source\ShaderReflection.cpp" />
     <ClCompile Include="..\..\..\source\ShaderTrans.cpp" />
     <ClCompile Include="..\..\..\source\ShaderValidator.cpp" />
   </ItemGroup>
@@ -32,6 +33,7 @@
     <ClInclude Include="..\..\..\include\shadertrans\GLSLangAdapter.h" />
     <ClInclude Include="..\..\..\include\shadertrans\ShaderInfo.h" />
     <ClInclude Include="..\..\..\include\shadertrans\ShaderParser.h" />
+    <ClInclude Include="..\..\..\include\shadertrans\ShaderReflection.h" />
     <ClInclude Include="..\..\..\include\shadertrans\ShaderStage.h" />
     <ClInclude Include="..\..\..\include\shadertrans\ShaderTrans.h" />
     <ClInclude Include="..\..\..\include\shadertrans\ShaderValidator.h" />
