--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "external/glslang"]
 	path = external/glslang
 	url = git@github.com:KhronosGroup/glslang.git
+[submodule "external/SpvGenTwo"]
+	path = external/SpvGenTwo
+	url = git@github.com:rAzoR8/SpvGenTwo.git
