--- a/platform/msvc/projects/shadertrans_new.vcxproj.filters
+++ b/platform/msvc/projects/shadertrans_new.vcxproj.filters
@@ -28,6 +28,21 @@
     <ClCompile Include="..\..\..\external\SPIRV-Tools\source\link\linker.cpp">
       <Filter>external\SPIRV-Tools</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\source\SpirvTools.cpp">
+      <Filter>tools</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\source\spirv_IR.cpp">
+      <Filter>spirv</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\source\spirv_Linker.cpp">
+      <Filter>spirv</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\source\spirv_Parser.cpp">
+      <Filter>spirv</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\source\ShaderLink.cpp">
+      <Filter>linker</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\include\shadertrans\ShaderParser.h">
@@ -63,6 +78,21 @@
     <ClInclude Include="..\..\..\external\SPIRV-Tools\include\spirv-tools\linker.hpp">
       <Filter>external\SPIRV-Tools</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\..\include\shadertrans\SpirvTools.h">
+      <Filter>tools</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\include\shadertrans\spirv_IR.h">
+      <Filter>spirv</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\include\shadertrans\spirv_Linker.h">
+      <Filter>spirv</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\include\shadertrans\spirv_Parser.h">
+      <Filter>spirv</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\include\shadertrans\ShaderLink.h">
+      <Filter>linker</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="parser">
@@ -88,6 +118,12 @@
     </Filter>
     <Filter Include="external\SPIRV-Tools">
       <UniqueIdentifier>{d6f83eae-bf2d-47a7-b81e-15ad6b0164eb}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="spirv">
+      <UniqueIdentifier>{8a14fd3a-81ca-4311-9c53-b7c3a794e785}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="linker">
+      <UniqueIdentifier>{55e7e181-33fb-4ebc-b2d9-b12c51be76ba}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
 </Project>
