[ADDED] use GL_GOOGLE_include_directive for include, and try to unique include modules

--- a/platform/msvc/projects/shadertrans_new.vcxproj
+++ b/platform/msvc/projects/shadertrans_new.vcxproj
@@ -26,6 +26,7 @@
     <ClCompile Include="..\..\..\source\ShaderInfo.cpp" />
     <ClCompile Include="..\..\..\source\ShaderBuilder.cpp" />
     <ClCompile Include="..\..\..\source\ShaderParser.cpp" />
+    <ClCompile Include="..\..\..\source\ShaderPreprocess.cpp" />
     <ClCompile Include="..\..\..\source\ShaderReflection.cpp" />
     <ClCompile Include="..\..\..\source\ShaderRename.cpp" />
     <ClCompile Include="..\..\..\source\ShaderTrans.cpp" />
@@ -42,6 +43,7 @@
     <ClInclude Include="..\..\..\include\shadertrans\CompilerDX.h" />
     <ClInclude Include="..\..\..\include\shadertrans\ConfigGLSL.h" />
     <ClInclude Include="..\..\..\include\shadertrans\GLSLangAdapter.h" />
+    <ClInclude Include="..\..\..\include\shadertrans\ShaderPreprocess.h" />
     <ClInclude Include="..\..\..\include\shadertrans\ShaderInfo.h" />
     <ClInclude Include="..\..\..\include\shadertrans\ShaderBuilder.h" />
     <ClInclude Include="..\..\..\include\shadertrans\ShaderParser.h" />
