--- a/platform/msvc/projects/shadertrans_new.vcxproj
+++ b/platform/msvc/projects/shadertrans_new.vcxproj
@@ -106,6 +106,12 @@
     <OutDir>..\shadertrans\x86\Release\</OutDir>
     <IntDir>..\shadertrans\x86\Release\obj\</IntDir>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
+    <IntDir>$(Platform)\$(Configuration)\$(ProjectName)\</IntDir>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
+    <IntDir>$(Platform)\$(Configuration)\$(ProjectName)\</IntDir>
+  </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <Optimization>Disabled</Optimization>
